# contour

./: CMakeLists.txt  TODO.md  sitemap.xml
.github/workflows/: build.yml
src/: CMakeLists.txt
src/contour/: Config.cpp  TerminalWidget.cpp  TerminalWidget.h  TerminalWindow.cpp  helper.cpp  helper.h
src/terminal/: CMakeLists.txt  Functions.h  Screen.cpp  Sequencer.cpp  Sequencer.h
src/terminal_renderer/: TextRenderer.h
src/terminal_renderer/opengl/shaders/: background.frag  background.vert  text.frag  text.vert
src/text_shaper/: open_shaper.cpp
